BE/Aucation/src/main/java/com/example/aucation/common/error/NotFoundException.java
package com.example.aucation.common.error;

public class NotFoundException extends ApplicationException {

    public NotFoundException(ApplicationError error) {
        super(error);
    }
}
